# src/routes/userRoutes.js
@@ -2,9 +2,10 @@ const express = require('express');
 
 const userController = require('../controllers/userController');
 const authJWT = require('../middleware/authJWT');
+const authorize = require('../middleware/authorizeRole');
 
 const router = express.Router();
 
-router.get('/me/stats', authJWT, userController.getMyStats);
+router.get('/me/stats', authJWT, authorize(['admin', 'staff']), userController.getMyStats);
 
 module.exports = router;
